--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,8 @@
+2025/04/16
+IF ls_actual_data-fipex EQ 'INTERNAL'.
+    ls_data-costcenter = ls_actual_data-pkostl. 
+ENDIF.
+
 2025/04/15
 ![image](https://github.com/user-attachments/assets/4936f30a-6a3a-4252-9f06-198771ba4d0e)
 
