--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,6 @@
+2025/04/24
+Project Definition (Project Management) could not be created as Commercial Project 'D.10.00020' already exists
+
 2025/04/16
 IF ls_actual_data-fipex EQ 'INTERNAL'.
     ls_data-costcenter = ls_actual_data-pkostl. 
