--- a/20250112.md
+++ b/20250112.md
@@ -1,5 +1,6 @@
 2025/04/24
 Project Definition (Project Management) could not be created as Commercial Project 'D.10.00020' already exists
+![image](https://github.com/user-attachments/assets/9956c74e-842b-4c3b-9291-332c57620719)
 
 2025/04/16
 IF ls_actual_data-fipex EQ 'INTERNAL'.
