--- a/20250112.md
+++ b/20250112.md
@@ -1,4 +1,6 @@
 2025/04/24
+SELECT fistl,zrpt_year,zrpt_monat,fipex,fkbtr,lifnr,kostl,zpo_apv_amt
+ls_data-pocommitment = ls_commit_data-zpo_apv_amt.
 Project Definition (Project Management) could not be created as Commercial Project 'D.10.00020' already exists
 ![image](https://github.com/user-attachments/assets/9956c74e-842b-4c3b-9291-332c57620719)
 
