--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,19 @@
+2025/05/06
+PR Planning Report
+ZCON_PFMT_PRPL    PR Level Setting  
+ZCON_PFMT_GROUP   PR Column Setting
+/RPM/FIN_B_PLAN    Financial planning for Buckets
+/RPM/CAP_B_PLAN    Capacity planning for Buckets
+/RPM/FIN_PLAN      Financial Planning for Item
+/RPM/CAP_PLAN      Capacity planning for Item
+
+PFM Report
+ZCON_PFMT_GROUPR   Report Column Setting
+/RPM/FIN_B_PLAN    Financial planning for Buckets
+/RPM/CAP_B_PLAN    Capacity planning for Buckets
+/RPM/FIN_PLAN      Financial Planning for Item
+/RPM/CAP_PLAN      Capacity planning for Item
+
 2025/04/24
 SELECT fistl,zrpt_year,zrpt_monat,fipex,fkbtr,lifnr,kostl,zpo_apv_amt
 ls_data-pocommitment = ls_commit_data-zpo_apv_amt.
