--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,5 @@
+Retrieve the configuration of corresponding fields based on the initiative.
+
 https://cariadds4h.sap.cariad.eu.sap.cloud.vwgroup.com/sap/bc/ui2/flp?sap-client=110&sap-language=EN#ProjectInitiative-showAllWD?sap-ui-tech-hint=WDA
 2025/05/06
 PR Planning Report
