--- a/20250112.md
+++ b/20250112.md
@@ -1,5 +1,8 @@
 Retrieve the configuration of corresponding fields based on the initiative.
-
+/RPM/CAP_GROUP_MODIFY
+/RPM/FIN_GROUP_MODIFY
+/RPM/CAP_GROUP_B_MODIFY
+/RPM/FIN_GROUP_B_MODIFY
 https://cariadds4h.sap.cariad.eu.sap.cloud.vwgroup.com/sap/bc/ui2/flp?sap-client=110&sap-language=EN#ProjectInitiative-showAllWD?sap-ui-tech-hint=WDA
 2025/05/06
 PR Planning Report
