--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,6 @@
+2025/05/08
+ZCON_PFM_ODATA_TARGET_SRV
+2025/05/07
 Retrieve the configuration of corresponding fields based on the initiative.
 /RPM/CAP_GROUP_MODIFY
 /RPM/FIN_GROUP_MODIFY
