--- a/20250112.md
+++ b/20250112.md
@@ -1,4 +1,30 @@
+2025/05/13
+
+Hierarch/Planning data Services:
+HierarchySet(input parameter:Bucketguid)
+PlanningDataSet(input parameter:Bucketguid)
+
+Functions:
+FM_Cancel(input parameter:Bucketguid)
+FM_Edit(input parameter:Bucketguid)
+FM_Rate(input parameters:      
+        CostCategory
+        CostGroup
+        CostViewType
+        Currency
+        Date
+        EffortCategory
+        EffortGroup
+        EffortViewType
+        Unit
+)
+CDS:
+ZCON_PFM_DDL_I_BUCKET
+ZCON_PFM_DDL_I_PORTFOLIO
+ZCON_PFM_DDL_I_TGRP
+
 2025/05/08
+
 ZCON_PFM_ODATA_TARGET_SRV
 2025/05/07
 Retrieve the configuration of corresponding fields based on the initiative.
