--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,8 @@
+
+
+110	ZCL_CON_CPM_IE_PWSSE_REP_ATTR	/CPD/IF_PWSSE_REP_ATTR~AFTER_BOPF_COMMIT	7152	1	X	ZDE_CL_CON_CPM_PWSWS_MP_SAVE	AFTER_MP_SAVE
+110	ZCL_CON_CPM_IE_PWSSE_REP_ATTR	/CPD/IF_PWSSE_REP_ATTR~VALIDATE_HDR_REP_ATTR	7152	2	X	ZDE_CL_CON_CPM_MP_CHK_DATA	CHECK_PLAN_DATE
+
 2025/05/16
 PlanningDataSet?$filter=Bucketguid%20eq%20guid%276775689e-1a46-1edf-b5ac-38b80521adf6%27
 
