--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,5 @@
+Add a check for PFM-CPM data synchronization
+
 110	ZCL_CON_CPM_IE_PWSWS_MP_SAVE	SYN_PROJ_PERIOD	7152	1		ZDE_CL_CON_CPM_PWSWS_MP_SAVE	UPDATE_PFP_PERIOD
 
 
