--- a/20250112.md
+++ b/20250112.md
@@ -1,6 +1,10 @@
+2025/05/28
+ZCL_CON_PFM_ITEM_ATTR_MODIFY	IF_EX_RPM_PROJ_CUST_FIELDS~CUST_PROJ_PREPARE_TO_SAVE	7152	1		ZDE_CL_CON_PFM_ITEM_CUST_FIELD	CHECK_COMMERCIAL_PROJECT_ATTRS
+
 Add a check for PFM-CPM data synchronization
 
 110	ZCL_CON_CPM_IE_PWSWS_MP_SAVE	SYN_PROJ_PERIOD	7152	1		ZDE_CL_CON_CPM_PWSWS_MP_SAVE	UPDATE_PFP_PERIOD
+
 
 
 110	ZCL_CON_CPM_IE_PWSSE_REP_ATTR	/CPD/IF_PWSSE_REP_ATTR~AFTER_BOPF_COMMIT	7152	1	X	ZDE_CL_CON_CPM_PWSWS_MP_SAVE	AFTER_MP_SAVE
