--- a/job2025.06-08.md
+++ b/job2025.06-08.md
@@ -10,4 +10,4 @@ Priority	Dev. Complete	Topic	Requirement	Comment
 6	2025/7/16	4	Snapshot program to create item and bucket snapshot	 
 6	2025/7/25	4	Adjust PR Plan, PFM Report, Target Setting to display snapshot	 
 Backlog	 	1	Add Demand column in FM Report	 
-![Uploading image.png…]()
+![image](https://github.com/user-attachments/assets/bc4ee94a-0e43-4a0b-ba68-568be9eda8e8) 
