--- a/20250112.md
+++ b/20250112.md
@@ -1,3 +1,6 @@
+ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~GET_ATTRIBUTES	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	GET_SYSTEM_STATUS_UPD_FLAG
+ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~ON_SAVE_REQUESTED	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	REMOVE_ASSIGNED_ITEMS
+
 ZCON_CPM_DDL_I_MULTIWBS
 init1234ZTTWAN12345!
 2025/05/28
