--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,10 @@
+1 Retain only the required key figure data.(plan cost/transaction cost/quantity)
+![image](https://github.com/user-attachments/assets/643162a8-d9f7-4843-a678-746d24a1831d)
+2 If any key figure value is zero, remove that period's record and retain only periods with non-zero data.
+![image](https://github.com/user-attachments/assets/3648df9e-3c26-4e0d-bbf7-708a88032d8f)
+
+
+
 1 Replace fetching financial/capacity planning data by calling the bucket/item API with directly retrieving it via CDS view, as the bucket/item API does not support batch queries.
 After update:
 ![image](https://github.com/user-attachments/assets/4f02b9a2-78dc-4b55-a555-a8a4d3b6512d)
