--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,4 @@
+PFM I Project duration not adjustable - DevStack Jira
 Original version only pulled calendar months, omitting zero-value checks on period key figures.
 1 Retain only the required key figure data.(plan cost/transaction cost/quantity)
 ![image](https://github.com/user-attachments/assets/643162a8-d9f7-4843-a678-746d24a1831d)
