--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,12 @@
+在Portfolio和Bucket增加字段 Forecast Period和Forecast Status
+Portfolio: /RPM/TS_PORTFOLIO_DATA_CUST
+Bucket: /RPM/TS_BUCKET_DATA_CUST
+
+Forecast Status从配置表/CPD/VSC_PRF_ST的ZPFM状态参数取值
+ 
+Forecast Period可以参考CPM Financial Plan上的字段
+
+
 PFM I Project duration not adjustable - DevStack Jira
 Original version only pulled calendar months, omitting zero-value checks on period key figures.
 1 Retain only the required key figure data.(plan cost/transaction cost/quantity)
