--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,13 @@
+Portfolio:ZCON_PFM_DDL_I_PORTFOLIO
+Forecast Level:ZCON_PFM_DDL_I_FRPL
+Planning Field:ZCON_CPM_DDL_I_PLFLD
+HeaderSet
+eg:/sap/opu/odata/SAP/ZCON_PFM_ODATA_FORECAST_SRV/HeaderSet(Portfolioguid=guid'6775689e-1a46-1fd0-88b0-560b691b6e44',Planningfield='PL002')
+HierarchySet 
+eg:/sap/opu/odata/SAP/ZCON_PFM_ODATA_FORECAST_SRV/HeaderSet(Portfolioguid=guid'6775689e-1a46-1fd0-88b0-560b691b6e44',Planningfield='PL002')/ToHierarchy
+PlanningDataSet
+eg:/sap/opu/odata/SAP/ZCON_PFM_ODATA_FORECAST_SRV/HeaderSet(Portfolioguid=guid'6775689e-1a46-1fd0-88b0-560b691b6e44',Planningfield='PL002')/ToPlanningData
+
 在Portfolio和Bucket增加字段 Forecast Period和Forecast Status
 Portfolio: /RPM/TS_PORTFOLIO_DATA_CUST
 Bucket: /RPM/TS_BUCKET_DATA_CUST
