--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,4 @@
+Planning line items exist for future periods in 'D.10'.
 HeaderSet(Portfolioguid=guid'6775689e-1a46-1fd0-88b0-560b691b6e44',Planningfield='PL001')/ToHierarchy
 
 Portfolio:ZCON_PFM_DDL_I_PORTFOLIO
