--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,5 @@
+110	ZCL_CON_CPM_IE_PFP_VAL_PLAN_HD	ENHANCE_DATE_CHECK	7152	1	X	ZDE_CL_CON_CPM_PFP_PLAN_HEADER	CHECK_PLAN_HEADER_DATE
+
 Planning line items exist for future periods in 'D.10'.
 HeaderSet(Portfolioguid=guid'6775689e-1a46-1fd0-88b0-560b691b6e44',Planningfield='PL001')/ToHierarchy
 
