--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,11 @@
+<img width="1440" height="640" alt="image" src="https://github.com/user-attachments/assets/fa2905ee-9cca-4f31-bab7-aa46c8a7cde1" />
+<img width="894" height="435" alt="image" src="https://github.com/user-attachments/assets/1c235780-f18a-4f16-b701-d71396f41a84" />
+
+<img width="701" height="504" alt="image" src="https://github.com/user-attachments/assets/84b76d6c-8de5-48d8-8681-78f6191704de" />
+<img width="666" height="379" alt="image" src="https://github.com/user-attachments/assets/2ad65cf6-9d5e-44ac-bce3-51bc06aebd56" />
+<img width="735" height="428" alt="image" src="https://github.com/user-attachments/assets/5025c7c2-08c0-4181-8f30-8cce3277c10f" />
+
+
 110	ZCL_CON_CPM_IE_PFP_VAL_PLAN_HD	ENHANCE_DATE_CHECK	7152	1	X	ZDE_CL_CON_CPM_PFP_PLAN_HEADER	CHECK_PLAN_HEADER_DATE
 
 Planning line items exist for future periods in 'D.10'.
