--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,10 @@
-<img width="1440" height="640" alt="image" src="https://github.com/user-attachments/assets/fa2905ee-9cca-4f31-bab7-aa46c8a7cde1" />
+POACTREE03 - Edit Accrual Objects
+ 
+公司代码 7152
+ 
+合同号 4500032505
+ 
+ <img width="1440" height="640" alt="image" src="https://github.com/user-attachments/assets/fa2905ee-9cca-4f31-bab7-aa46c8a7cde1" />
 <img width="894" height="435" alt="image" src="https://github.com/user-attachments/assets/1c235780-f18a-4f16-b701-d71396f41a84" />
 
 <img width="701" height="504" alt="image" src="https://github.com/user-attachments/assets/84b76d6c-8de5-48d8-8681-78f6191704de" />
