--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,5 @@
+ZCL_CON_CPM_PWSSE_MP_DEF_ROLE	ENHANCE_TEAM_UI	7152	1	X	ZDE_CL_CON_CPM_PWSSE_DEF_ROLE	SET_BUTTON_ENABLED
+
 POACTREE03 - Edit Accrual Objects
  
 公司代码 7152
