--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,22 @@
-ZCL_CON_CPM_PWSSE_MP_DEF_ROLE	ENHANCE_TEAM_UI	7152	1	X	ZDE_CL_CON_CPM_PWSSE_DEF_ROLE	SET_BUTTON_ENABLED
+SELECT DISTINCT
+          team~engagementprojectuuid AS projuuid,
+          teamrole~engagementprojectteamrole AS teamrole,
+          STRING_AGG( projectmember~employmentinternalid,';' )  AS employmentinternalids ,
+          COUNT( projectmember~employmentinternalid ) AS counts
+       FROM i_engagementprojectteam AS team
+       INNER JOIN i_engagementprojectteamrole AS teamrole ON team~engagementprojectteamuuid = teamrole~engagementprojectteamuuid
+       INNER JOIN i_engmtprojteammember AS teammember  ON teamrole~engagementprojectteamroleuuid = teammember~engagementprojectteamroleuuid
+       INNER JOIN i_engagementprojectmember AS projectmember  ON teammember~engagementprojectmemberuuid = projectmember~engagementprojectmemberuuid AND projectmember~BusinessPartnerMemberType = @lc_bprole
+       WHERE teamrole~engagementprojectteamrole IN ( @lc_roleid_z003,@lc_roleid_z004 )
+       AND team~engagementprojectuuid IN @lr_projectuuid
+       GROUP BY team~engagementprojectuuid,teamrole~engagementprojectteamrole
+       INTO TABLE @DATA(lt_deputymc).
+      IF sy-subrc = 0.
+        SORT lt_deputymc BY projuuid teamrole.
+        DELETE lt_deputymc WHERE counts <= 1.
+      ENDIF.
+      
+      ZCL_CON_CPM_PWSSE_MP_DEF_ROLE	ENHANCE_TEAM_UI	7152	1	X	ZDE_CL_CON_CPM_PWSSE_DEF_ROLE	SET_BUTTON_ENABLED
 
 POACTREE03 - Edit Accrual Objects
  
