--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,42 @@
-110	ZCL_CON_PFM_PERIOD_FACTOR_ENH	ENHANCE_PRIOD_FACTOR	7152	1	X	ZDE_CL_CON_PFM_PERIOD_FACTOR	SET_CONVERSION_FACTOR
+SELECT DISTINCT
+          _finplan~objectguid
+         ,_finplan~category
+         ,_finplan~group_id
+         ,_finplan~viewtype
+         ,_finplan~changed_on
+         ,_finplan~categoryguid
+         ,_finplan~groupguid
+      FROM @lt_finplan AS _finplan INTO TABLE @DATA(lt_finplan_key).
+      IF sy-subrc = 0.
+        SORT lt_finplan_key BY objectguid category group_id viewtype changed_on DESCENDING.
+        DELETE ADJACENT DUPLICATES FROM  lt_finplan_key COMPARING objectguid category group_id viewtype.
+      ENDIF.
+
+
+ READ TABLE lt_finplan_key TRANSPORTING NO FIELDS WITH KEY categoryguid = ls_finplan-categoryguid groupguid = ls_finplan-groupguid.
+        IF sy-subrc <> 0.
+          CONTINUE.
+        ENDIF.
+
+ SELECT DISTINCT
+          _capplan~objectguid
+         ,_capplan~category
+         ,_capplan~group_id
+         ,_capplan~viewtype
+         ,_capplan~changed_on
+         ,_capplan~categoryguid
+         ,_capplan~groupguid
+      FROM @lt_capplan AS _capplan INTO TABLE @DATA(lt_capplan_key).
+      IF sy-subrc = 0.
+        SORT lt_capplan_key BY objectguid category group_id viewtype changed_on DESCENDING.
+        DELETE ADJACENT DUPLICATES FROM  lt_capplan_key COMPARING objectguid category group_id viewtype.
+      ENDIF.
+READ TABLE lt_capplan_key TRANSPORTING NO FIELDS WITH KEY categoryguid = ls_capplan-categoryguid groupguid = ls_capplan-groupguid.
+        IF sy-subrc <> 0.
+          CONTINUE.
+        ENDIF.
+        
+        110	ZCL_CON_PFM_PERIOD_FACTOR_ENH	ENHANCE_PRIOD_FACTOR	7152	1	X	ZDE_CL_CON_PFM_PERIOD_FACTOR	SET_CONVERSION_FACTOR
 
 SELECT DISTINCT
           team~engagementprojectuuid AS projuuid,
