--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,11 @@
-SELECT DISTINCT
+IF ls_data-resourceid IS INITIAL AND ls_data-resourcetypeid NE 'ZINT'.
+            READ TABLE lt_res ASSIGNING FIELD-SYMBOL(<ls_res>) WITH KEY res_type_id = ls_data-resourcetypeid.
+            IF sy-subrc = 0.
+              ls_data-resourceid = <ls_res>-resource_id.
+            ENDIF.
+          ENDIF.
+          
+          SELECT DISTINCT
           _finplan~objectguid
          ,_finplan~category
          ,_finplan~group_id
