--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,11 @@
+POACTREE03 - Edit Accrual Objects
+ 
+公司代码 7152
+ 
+合同号 4500032505
 
+ FACRARVWCO
+ 
 <img width="710" height="317" alt="image" src="https://github.com/user-attachments/assets/653ed1e8-379b-46c1-8464-7d8f6b54e10b" />
 <img width="907" height="602" alt="image" src="https://github.com/user-attachments/assets/6da08b3f-d69e-466c-adb3-fd4fc75e9db8" />
 <img width="1010" height="648" alt="image" src="https://github.com/user-attachments/assets/ae068271-f26d-4b65-ac13-66c514fca1ce" />
