--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,50 @@
+002
+Request/Task
+12
+20
+003
+Type
+4
+5
+004
+Status
+6
+10
+005
+Target System
+13
+13
+006
+Request Category
+16
+51
+007
+Owner
+5
+12
+008
+Date
+4
+10
+009
+Time
+4
+8
+010
+Parent Request
+14
+20
+011
+Source Client
+13
+44
+012
+Target Client
+13
+43
+
+
+
 POACTREE03 - Edit Accrual Objects
  
 公司代码 7152
