--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,203 @@
+以下是改进后的ABAP程序，其中日期字段默认设置为当前系统月的最后一天，并通过检查确保用户只能选择每月的最后一天：
+
+```ABAP
+REPORT zcopy_revised_poc.
+
+* Data Definitions
+TABLES: ekpo, acesobj_item, acesobj_item_per.
+
+* 获取某月的最后一天
+FORM get_month_last_day USING iv_date TYPE d
+                        CHANGING cv_lastday TYPE d.
+  DATA: lv_year TYPE numc4,
+        lv_month TYPE numc2.
+  
+  lv_year = iv_date+0(4).
+  lv_month = iv_date+4(2).
+  
+  CALL FUNCTION 'RP_LAST_DAY_OF_MONTHS'
+    EXPORTING
+      day_in            = iv_date
+    IMPORTING
+      last_day_of_month = cv_lastday
+    EXCEPTIONS
+      day_in_no_date    = 1
+      OTHERS            = 2.
+ENDFORM.
+
+* 验证是否为月末日期
+FORM validate_month_end USING iv_date TYPE d
+                       CHANGING cv_valid TYPE abap_bool.
+  DATA: lv_lastday TYPE d.
+  
+  PERFORM get_month_last_day USING iv_date CHANGING lv_lastday.
+  
+  cv_valid = boolc( iv_date = lv_lastday ).
+ENDFORM.
+
+* Selection Screen
+SELECTION-SCREEN BEGIN OF BLOCK b1 WITH FRAME TITLE TEXT-001.
+  SELECT-OPTIONS: s_bukrs FOR acesobj_item_per-bukrs NO INTERVALS.
+  
+  " 设置默认值为当前月最后一天
+  PARAMETERS: p_zdate TYPE d OBLIGATORY DEFAULT sy-datum.
+  
+  SELECT-OPTIONS: s_refkey FOR acesobj_item_per-ref_key NO INTERVALS.
+SELECTION-SCREEN END OF BLOCK b1.
+
+* 初始化默认值
+INITIALIZATION.
+  PERFORM get_month_last_day USING sy-datum CHANGING p_zdate.
+
+* 日期验证
+AT SELECTION-SCREEN ON p_zdate.
+  DATA: lv_valid TYPE abap_bool.
+  
+  PERFORM validate_month_end USING p_zdate CHANGING lv_valid.
+  
+  IF lv_valid = abap_false.
+    MESSAGE e398(00) WITH '必须选择月末日期'.
+  ENDIF.
+
+* Internal Tables
+TYPES: BEGIN OF ty_output,
+         bukrs               TYPE bukrs,
+         ref_key            TYPE char32,
+         ref_subkey         TYPE char32,
+         adjusted_per_amnt  TYPE wrbtr,
+         adjstmnt_reason    TYPE char20,
+         adjstmnt_comment   TYPE char255,
+       END OF ty_output.
+
+DATA: lt_output TYPE TABLE OF ty_output,
+      ls_output TYPE ty_output.
+
+* Main Program
+START-OF-SELECTION.
+  PERFORM get_revised_poc_data.
+  PERFORM copy_to_current_period.
+
+*&---------------------------------------------------------------------*
+*&      Form  GET_REVISED_POC_DATA
+*&---------------------------------------------------------------------*
+FORM get_revised_poc_data.
+  SELECT a~bukrs, a~ref_key, a~ref_subkey, 
+         a~adjusted_per_amnt_wsl, a~adjstmnt_reason, a~adjstmnt_comment,
+         a~period_end_date,
+         b~life_end_date,
+         c~elikz
+    FROM acesobj_item_per AS a
+    INNER JOIN acesobj_item AS b
+      ON  a~bukrs = b~bukrs
+      AND a~ref_key = b~ref_key
+      AND a~ref_subkey = b~ref_subkey
+      AND a~itemtype = b~itemtype
+    INNER JOIN ekpo AS c
+      ON  a~ref_key = c~ebeln
+      AND substring( val = a~ref_subkey off = 3 len = 2 ) = c~ebelp
+    INTO TABLE @DATA(lt_data)
+    WHERE a~bukrs IN @s_bukrs
+      AND a~ref_key IN @s_refkey
+      AND c~elikz IS NULL
+      AND b~life_end_date < @p_zdate
+      AND a~itemtype = 'SCSTPLN'
+      AND a~adjusted_per_amnt_wsl <> 0.
+
+  IF lt_data IS INITIAL.
+    MESSAGE '未找到相关数据' TYPE 'I'.
+    STOP.
+  ENDIF.
+
+  " 获取每个键组合的最新记录
+  SORT lt_data BY bukrs ref_key ref_subkey period_end_date DESCENDING.
+  DELETE ADJACENT DUPLICATES FROM lt_data COMPARING bukrs ref_key ref_subkey.
+
+  " 准备输出
+  LOOP AT lt_data ASSIGNING FIELD-SYMBOL(<fs_data>).
+    ls_output-bukrs = <fs_data>-bukrs.
+    ls_output-ref_key = <fs_data>-ref_key.
+    ls_output-ref_subkey = <fs_data>-ref_subkey.
+    ls_output-adjusted_per_amnt = <fs_data>-adjusted_per_amnt_wsl.
+    ls_output-adjstmnt_reason = <fs_data>-adjstmnt_reason.
+    ls_output-adjstmnt_comment = <fs_data>-adjstmnt_comment.
+    APPEND ls_output TO lt_output.
+  ENDLOOP.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+*&      Form  COPY_TO_CURRENT_PERIOD
+*&---------------------------------------------------------------------*
+FORM copy_to_current_period.
+  DATA: lv_success TYPE i,
+        lv_failed  TYPE i.
+
+  LOOP AT lt_output INTO ls_output.
+    " 调用BAPI或直接更新
+    DATA: ls_item_per TYPE acesobj_item_per.
+    
+    " 获取当前期间记录
+    SELECT SINGLE * FROM acesobj_item_per INTO ls_item_per
+      WHERE bukrs = ls_output-bukrs
+        AND ref_key = ls_output-ref_key
+        AND ref_subkey = ls_output-ref_subkey
+        AND period_end_date = p_zdate
+        AND itemtype = 'SCSTPLN'.
+    
+    IF sy-subrc = 0.
+      " 更新现有记录
+      ls_item_per-adjusted_per_amnt_wsl = ls_output-adjusted_per_amnt.
+      ls_item_per-adjstmnt_reason = ls_output-adjstmnt_reason.
+      ls_item_per-adjstmnt_comment = ls_output-adjstmnt_comment.
+      
+      UPDATE acesobj_item_per FROM ls_item_per.
+    ELSE.
+      " 创建新记录
+      CLEAR ls_item_per.
+      ls_item_per-bukrs = ls_output-bukrs.
+      ls_item_per-ref_key = ls_output-ref_key.
+      ls_item_per-ref_subkey = ls_output-ref_subkey.
+      ls_item_per-period_end_date = p_zdate.
+      ls_item_per-itemtype = 'SCSTPLN'.
+      ls_item_per-adjusted_per_amnt_wsl = ls_output-adjusted_per_amnt.
+      ls_item_per-adjstmnt_reason = ls_output-adjstmnt_reason.
+      ls_item_per-adjstmnt_comment = ls_output-adjstmnt_comment.
+      
+      INSERT acesobj_item_per FROM ls_item_per.
+    ENDIF.
+    
+    IF sy-subrc = 0.
+      ADD 1 TO lv_success.
+      COMMIT WORK.
+    ELSE.
+      ADD 1 TO lv_failed.
+      ROLLBACK WORK.
+    ENDIF.
+  ENDLOOP.
+  
+  " 输出结果
+  MESSAGE s398(00) WITH '处理完成:' lv_success '条记录更新成功,' lv_failed '条失败'.
+ENDFORM.
+```
+
+主要改进点：
+
+1. **日期默认值设置**：
+   - 在INITIALIZATION事件中，使用`get_month_last_day`函数设置默认值为当前月的最后一天
+
+2. **日期验证**：
+   - 添加AT SELECTION-SCREEN ON p_zdate事件验证
+   - 使用`validate_month_end`函数检查用户输入的日期是否为月末日期
+   - 如果不是月末日期，显示错误消息"必须选择月末日期"
+
+3. **日期计算函数**：
+   - 添加`get_month_last_day`函数，使用标准函数`RP_LAST_DAY_OF_MONTHS`计算某月的最后一天
+   - 添加`validate_month_end`函数验证日期是否为月末
+
+4. **用户界面改进**：
+   - 当用户输入非月末日期时，系统会阻止继续执行并显示错误消息
+   - 选择屏幕初始化时自动显示当前月的最后一天作为默认值
+
+这样确保程序只能处理月末日期的数据，符合业务需求。
 Company Code
 Last Day of Period
 Accrual Object
