--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,7 @@
+110	ZCL_CON_CPM_PWSSE_MP_DEF_ROLE	ENHANCE_TEAM_UI	7152	1	X	ZDE_CL_CON_CPM_PWSSE_DEF_ROLE	SET_BUTTON_ENABLED
+110	ZCL_CON_PFM_EX_BUCKET_BADI	/RPM/IF_EX_BUCKET~ON_SAVE_REQUESTED	7152	1	X	ZDE_CL_CON_PFM_BUCKET_API_ENH	UPDATE_ITEM_STRUCTURE_ATTRS
+
+
 ZCON_CPM_ODATA_PW_MAINTAIN_SRV
 
 SLA2SPD
