--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,4 @@
+The date "2025.01.01" is outside the activation period.
 Not within the financial plan activity period.
 
 <img width="363" height="18" alt="image" src="https://github.com/user-attachments/assets/e1b080d1-a17d-4376-947d-77033ea24d11" />
