--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,8 @@
+ZDE_CON_PFMR_PLANNING_DATA_UPD
+PR Plan Adjustment
+ZPFM_MASSPRU PR Plan Adjustment 
+zcon_pfmt_prulog
+
 Item cannot be released. WBS elements does not exists.
 The date "2025.01.01" is outside the activation period.
 Not within the financial plan activity period.
