--- a/07072025.md
+++ b/07072025.md
@@ -1,7 +1,7 @@
 INM_INITIATIVE_O_BADI
 BAdi: Definition for Initiative
-ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~GET_ATTRIBUTES	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	GET_SYSTEM_STATUS_UPD_FLAG
-ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~ON_SAVE_REQUESTED	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	REMOVE_ASSIGNED_ITEMS
+ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~GET_ATTRIBUTES	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	GET_SYSTEM_STATUS_UPD_FLAG Enhancement of Attributes on Attribute Retrieval
+ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~ON_SAVE_REQUESTED	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	REMOVE_ASSIGNED_ITEMS Execution on Object Event 'Save Requested'
 ZCON_PFMIE_EX_INITIATIVE_BADI Implementation: BAdi: Definition for Initiative
 ZDE_CON_PFM_FM_PORTFOLIO_MOD
 
