--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,10 @@
+ZCL_CON_PFM_BUCKET_ENHANCE
+ZCL_CON_PFM_EX_BUCKET_BADI
+ZCL_CON_PFM_ITEM_VALUE_HELP
+ZCL_CON_PFM_EX_INITIATIVE_BADI
+ZCL_CON_PFM_EX_INITIATIVE_BADI
+
+
 INM_INITIATIVE_O_BADI
 BAdi: Definition for Initiative
 ZCL_CON_PFM_EX_INITIATIVE_BADI	IF_INM_EX_INITIATIVE_O~GET_ATTRIBUTES	7152	1	ZDE_CL_CON_PFM_INITIATIVE_ENH	GET_SYSTEM_STATUS_UPD_FLAG Enhancement of Attributes on Attribute Retrieval
