--- a/07072025.md
+++ b/07072025.md
@@ -1,6 +1,40 @@
 ZDE_CON_FIR_COPY_REVISED_POC
 Automated Roll-forward of Revised POC
 
+package gbb;
+
+import java.awt.*;
+import java.awt.event.InputEvent;
+import java.util.Timer;
+import java.util.TimerTask;
+
+public class RightClickEveryFiveMinutes {
+    public static void main(String[] args) {
+        try {
+            Robot robot = new Robot();
+            Timer timer = new Timer();
+             
+            TimerTask task = new TimerTask() {
+                @Override
+                public void run() {
+                    try { 
+                        Point mouseLocation = MouseInfo.getPointerInfo().getLocation();
+                        robot.mousePress(InputEvent.BUTTON1_DOWN_MASK); 
+                        robot.mouseRelease(InputEvent.BUTTON1_DOWN_MASK);
+                        System.out.println("已执行 - " + new java.util.Date());
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                }
+            };
+ 
+            timer.scheduleAtFixedRate(task, 0, 300000);
+        } catch (AWTException e) {
+            System.err.println(  e.getMessage());
+        }
+    }
+}
+
 init1234ZTTWAN565!
 ATW5HL0
 ZCON_CPMVC_PATTR Maintain Planning Attributes
