--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,5 @@
+CL_FACRA_RVW_APPRV_ACCR_UTIL
+ZCL_FI_ACE_RVW_APPRV_ACCR_UTIL
 ZDE_CON_FIR_COPY_REVISED_POC
 Automated Roll-forward of Revised POC
 ZCON_FIT_CPOCLOG
