--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,19 @@
+CPM Master Data            	CPM Stammdaten
+CPM Project Team Member        	CPM Projektteammitglied
+Cost Center Master Data (Attribute Time Dependent)              	Kostenstellenstammdaten (Attribut zeitabhängig)
+Cost Center Master Data (Attribute Non-Time Dependent)              	Kostenstellenstammdaten (Attribut nicht zeitabhängig)
+Cost Center Master Data (Text)   	Kostenstellenstammdaten (Text)
+Cost Center Master Data (Hierarchy)       	Kostenstellenstammdaten (Hierarchie)
+Business Partner Master Data (Attribute)              	Geschäftspartner-Stammdaten (Attribut)
+Business Partner Master Data (Text)        	Geschäftspartner-Stammdaten (Text)
+CPM Top Down 	CPM Top Down
+Forecast              	Prognose
+Bottom Up - External    	Bottom Up - External    
+Bottom Up - Internal      Bottom-up - Intern	Bottom Up - Internal      Bottom-up - Intern
+Target   	Ziel
+Commitment     	Verpflichtung
+Actual  	Tatsächliche 
+
 CONVERSION_EXIT_ABPSP_OUTPUT
 Taiyuan2024??!!
 ***CL_FACRA_RVW_APPRV_ACCR_UTIL
