--- a/09262025.md
+++ b/09262025.md
@@ -1,3 +1,9 @@
+1.	Load bucket structure from level 1 to level 4 by importing filter “Portfolio” ID.
+2.	Input filter “Project Type” ID to 2nd level bucket external ID.
+3.	Input filter “Planning Field” ID to 3rd level bucket external ID.
+4.	Input filter “Sub Planning Field” ID to 4th level bucket external ID.
+5.	Get all bucket GUIDs for level 4 buckets.
+
 Service:
 ZCON_PFM_ODATA_SPF_VERSION_SRV
 
