--- a/07072025.md
+++ b/07072025.md
@@ -1,6 +1,7 @@
 class name : ZDE_CL_CON_CPM_PW_UTIL method: GET_DEMAND_DATA->call function module:ZCON_FM_DEMAND_CAL
 
 mo_non_cache_reg = CAST /bobf/if_tra_trans_mgr_compl( lo_transaction_manager )->mo_non_cache_reg.
+/bobf/cl_tra_internal_tm_fctry
 
 <img width="1736" height="792" alt="image" src="https://github.com/user-attachments/assets/9f2feb8d-3d51-4ca8-afad-a23dbe61c5cb" />
 ZCON_PFM_DDL_I_USER_PORTFOLIO
