--- a/07072025.md
+++ b/07072025.md
@@ -1,5 +1,8 @@
 class name : ZDE_CL_CON_CPM_PW_UTIL method: GET_DEMAND_DATA->call function module:ZCON_FM_DEMAND_CAL
 
+DATA(lo_transaction_manager) = /bobf/cl_tra_internal_tm_fctry=>get_transaction_manager( mv_bo_key ).
+mo_non_cache_reg = lo_transaction_manager->mo_non_cache_reg.
+    
 mo_non_cache_reg = CAST /bobf/if_tra_trans_mgr_compl( lo_transaction_manager )->mo_non_cache_reg.
 /bobf/cl_tra_internal_tm_fctry
 
