Modify image and add text to 07072025.md
Updated image reference and added text.

--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,6 @@
 
+<img width="1731" height="757" alt="image" src="https://github.com/user-attachments/assets/c55deb96-3d43-4dd8-8152-e1b2b50ac118" />
+
 ![Uploading image.png…]()
 SLA2SPD
 Vgcwwq11102025!
