Modify 07072025.md with new function and image
Updated the content of 07072025.md to include a new cast function and an image.

--- a/07072025.md
+++ b/07072025.md
@@ -1,4 +1,7 @@
-ZCON_PFM_DDL_I_USER_PORTFOLIO
+
+      cast(substring(rtrim(replace(concat(name1, concat(' &@', name2)), '&@', ''),' '),1,80) as md_supplier_name) as SupplierName,
+      
+      ZCON_PFM_DDL_I_USER_PORTFOLIO
 
 <img width="1731" height="757" alt="image" src="https://github.com/user-attachments/assets/c55deb96-3d43-4dd8-8152-e1b2b50ac118" />
 
