Update 07072025.md with new data retrieval method

--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,4 @@
+zde_cl_con_cpm_pw_util=>get_demand_data
 
       cast(substring(rtrim(replace(concat(name1, concat(' &@', name2)), '&@', ''),' '),1,80) as md_supplier_name) as SupplierName,
       
