Refactor cost planning logic and variable assignments
Updated logic for handling cost plan data, including adjustments to variable names and conditions. Cleaned up redundant code and ensured proper assignment of values in the cost planning structure.

--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,65 @@
+
+Line 47 add:
+ls_plancost_cpm TYPE zfm_plancost_out_cpm_s,
+lt_plancost_cpm TYPE zfm_plancost_out_cpm_t.
+Line 67 add:
+AND iobjnm <> zde_cl_con_cpm_pw_util=>gc_mflg
+Line 233: replace 'ELSE' to 'ENDIF'
+Line 275: replace 'ENDIF' to '"ENDIF'
+Line 327: replace 'APPEND INITIAL LINE TO lt_plancost ASSIGNING <fs_output>.'
+to
+ASSIGN COMPONENT zde_cl_con_cpm_pw_util=>gc_mflg OF STRUCTURE <fs_data1> TO FIELD-SYMBOL(<fs_mflg>).
+      IF sy-subrc = 0.
+        READ TABLE ct_plancost INTO ls_plancost_cpm WITH KEY fictr = lv_fictr
+                                                       gjahr    = lv_gjahr
+                                                       monat    = lv_monat
+                                                       cmmtitem = lv_fipex
+                                                       .
+        IF sy-subrc = 0.
+          IF <fs_mflg> EQ abap_true.
+            ls_plancost_cpm-plancost  =  lv_plancost.
+            COLLECT ls_plancost_cpm INTO lt_plancost_cpm.
+          ENDIF.
+          CONTINUE.
+        ENDIF.
+      ENDIF.
+      READ TABLE lt_plancost ASSIGNING <fs_output> WITH KEY fictr    = lv_fictr
+                                                             gjahr    = lv_gjahr
+                                                             cmmtitem = lv_fipex
+                                                             monat = lv_monat.
+      IF sy-subrc <> 0.
+        APPEND INITIAL LINE TO lt_plancost ASSIGNING <fs_output>.
+      ENDIF.
+Line 348: replace '<fs_output>-plancost  = lv_plancost.' to '<fs_output>-plancost  = <fs_output>-plancost + lv_plancost.'
+Line 349: replace '<fs_output>-zplan_qty = lv_plan_qty.' to '<fs_output>-zplan_qty = <fs_output>-zplan_qty + lv_plan_qty.'
+Line 354: replace 'ct_plancost' to 'lt_plancost_cpm'
+Line 376: replace 'ct_plancost' to 'lt_plancost_cpm'
+Line 382: replace 'ct_plancost' to 'lt_plancost_cpm'
+Line 399: replace 'ct_plancost' to 'lt_plancost_cpm'
+Line 406: replace 'ct_plancost' to 'lt_plancost_cpm'
+Line 408: replace 'ct_plancost' to 'lt_plancost_cpm'
+Line 421-426: delete lines
+line 487 add: 
+LOOP AT lt_plancost_cpm INTO ls_plancost_cpm.
+    READ TABLE ct_plancost ASSIGNING FIELD-SYMBOL(<ls_plancost>) WITH KEY fictr    = ls_plancost_cpm-fictr
+                                                       gjahr    = ls_plancost_cpm-gjahr
+                                                       monat    = ls_plancost_cpm-monat
+                                                       cmmtitem = ls_plancost_cpm-cmmtitem.
+    IF sy-subrc = 0.
+      <ls_plancost>-plancost = <ls_plancost>-plancost + ls_plancost_cpm-plancost.
+    ELSE.
+      APPEND ls_plancost_cpm TO ct_plancost.
+    ENDIF.
+  ENDLOOP.
+
+
+
+
+
+
+
+
+
 BAPI_CURRENCY_CONV_TO_EXTERNAL
 BAPI_CURRENCY_CONV_TO_INTERNAL
 iobjnm <> zde_cl_con_cpm_pw_util=>gc_mflg
