--- a/07072025.md
+++ b/07072025.md
@@ -1,3 +1,4 @@
+<img width="1701" height="745" alt="image" src="https://github.com/user-attachments/assets/54df8f77-b6ce-48cb-b912-89bb5bd261c3" />
 
 Line 47 add:
 ls_plancost_cpm TYPE zfm_plancost_out_cpm_s,
